tests/invalid_inputs/sema/index_with_double.cpp

int main() {
	int arr[5];
	arr[3.14];
}
